added options to use nuclear or nuclear+core masses; added aliases for potentials etc.

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,6 @@
+make work the 'use_atomic_masses' etc. params
+
+----
 in diatom.f90, around line 1500, write the section to read in the rotational-nonadiabatic
 and vibrational non-adiabatic position-dependent masses
 
